# jsonette

./: .gitattributes  .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
bench/: __init__.mojo  _metrics.mojo  h2h_ours.mojo  h2h_theirs.mojo  kostya_dom.mojo  kostya_ondemand.mojo  parse_loop.mojo  profile_emit.mojo  profile_encode.mojo  profile_ipc.mojo  profile_number.mojo  profile_number_perf.mojo  profile_ondemand.mojo  profile_split.mojo  profile_stage1.mojo  profile_stage2.mojo  profile_stage_ins.mojo  profile_string_internals.mojo  rest.mojo  run_h2h_vps.sh  run_ondemand_vps.sh  run_rest_vps.sh  string_hammer.mojo
docs/: benchmarks.md
jsonette/: __init__.mojo  _alloc_count.mojo  document.mojo  error.mojo  parser.mojo  tape.mojo  value.mojo
jsonette/ondemand/: __init__.mojo  ondemand.mojo  reader.mojo  validate.mojo
jsonette/serialize/: __init__.mojo  json_value.mojo  reflect_loader.mojo  reflect_writer.mojo  roundtrip.mojo  tape_writer.mojo  writer.mojo
jsonette/stage1/: __init__.mojo  classifier.mojo  indexer.mojo  simd_ops.mojo  string_mask.mojo  utf8.mojo
jsonette/stage2/: builder.mojo  eisel_lemire.mojo  numbers.mojo  pow5_table.mojo  slow_float.mojo  strings.mojo
scripts/: audit_host.sh  bench_profile.mojo  bench_stage2_breakdown.mojo  bench_throughput.mojo  build.sh  download_corpus.py  download_test_vectors.py  gen_conformance_tests.py  gen_kostya_json.py  gen_pow5_table.py  run_tests.sh
scripts/cpp_bench/: bench.cpp  build.sh
scripts/kostya_bench/: build.sh  kostya_dom.cpp  kostya_ondemand.cpp  kostya_perf.h  run.sh
scripts/kostya_bench/rust/: Cargo.toml
scripts/kostya_bench/rust/src/: lib.rs  serde_custom.rs  serde_typed.rs  serde_untyped.rs
scripts/rust_bench/: Cargo.toml  bench.rs
simdjson/: __init__.mojo  _alloc_count.mojo  document.mojo  error.mojo  parser.mojo  tape.mojo  value.mojo
simdjson/serialize/: __init__.mojo  reflect_writer.mojo  roundtrip.mojo  tape_writer.mojo  writer.mojo
simdjson/stage1/: __init__.mojo  classifier.mojo  indexer.mojo  simd_ops.mojo  string_mask.mojo
simdjson/stage2/: builder.mojo  eisel_lemire.mojo  numbers.mojo  pow5_table.mojo  slow_float.mojo  strings.mojo
tests/conformance/: test_accept.mojo  test_parse_validate_differential.mojo  test_reject.mojo  test_reject_corpus.mojo  test_utf8.mojo
tests/fixtures/: float_corpus.tsv
tests/jsonette/: _stale_iter_aborts.mojo  _stale_string_aborts.mojo  test_adversarial_plan_b.mojo  test_alloc_count.mojo  test_dom_differential.mojo  test_gen_token.mojo  test_leaf_parity.mojo  test_nocopy.mojo  test_parser.mojo  test_pythonic_adversarial.mojo  test_pythonic_surface.mojo  test_raw_string_span.mojo  test_tape.mojo  test_value.mojo
tests/oracle/: gen_float_corpus.py  parse_reject_oracle.py  validate_oracle.py
tests/simdjson/: test_alloc_count.mojo  test_parser.mojo  test_tape.mojo  (+1 more)
(+59 files in other folders)
