[project]
name = "jsonette"
version = "0.1.0"
description = "SIMD-accelerated JSON parser for Mojo"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "mojox>=0.2",
    "mojo-compiler==1.0.0b2",
]

[build-system]
# mojo-compiler-mojo-libs is a transitive pre-release dep of mojo-compiler;
# build-isolation environments can't opt into pre-releases automatically, so
# it must be pinned explicitly here.
requires = [
    "mojox-build>=0.4",
    "mojo-compiler==1.0.0b2",
    "mojo-compiler-mojo-libs==1.0.0b2",
]
build-backend = "mojox_build"

[tool.uv]
prerelease = "allow"

[tool.mojox-build]
packages = ["jsonette"]
